# ImproNeuf.CastleRooms

./: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-11-05-core-mvp/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-11-05-core-mvp/sub-specs/: api-spec.md  technical-spec.md
.agent-os/specs/2025-11-09-api-call-optimization/: response-structure-analysis.md  spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-11-09-api-call-optimization/sub-specs/: api-spec.md  technical-spec.md
.agent-os/specs/2025-11-09-calendar-event-display/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-11-09-calendar-event-display/sub-specs/: technical-spec.md
.agent-os/specs/2025-11-10-event-color-hashing/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-11-10-event-color-hashing/sub-specs/: technical-spec.md
.agent-os/standards/: tech-stack.md
docs/: yesplan-api.md  yesplan.md
proof-of-concept-python/: README.md  fetch_yesplan_data.py  pyproject.toml  yesplan_data.json
src/: App.vue
src/__tests__/: App.test.ts
src/components/: BookerFilter.vue  BookingDetailsModal.vue  Calendar.vue  RoomFilter.vue
src/components/__tests__/: BookingDetailsModal.test.ts  Calendar.test.ts  RoomFilter.test.ts  responsive.test.ts
src/services/: yesplan-api.ts
src/services/__tests__/: yesplan-api.integration.test.ts  yesplan-api.test.ts
src/utils/: colorUtils.ts  filterUtils.ts
src/utils/__tests__/: colorUtils.test.ts
